tests/NormalTests/paczka1/fuzzy1/96203205.err
Error in line 1: nqs4kfq1 A738 50,2
Error in line 4: nqs4kfq1 S474 33,6
Error in line 12: dTVWi8pTU A738 48,3
Error in line 16: S474 S474 178,58
Error in line 15: S474 S474 71,8
Error in line 25: Vk6PleDbSmp A738 38,5
Error in line 35: nqs4kfq1 S474 74,8
Error in line 38: NnGl0km S474 10,9
Error in line 39: NnGl0km A738 17,1
